objects/AIA_Related_Benefit_Design_Product__c.object
<CustomObject>
    <fields>
        <fullName>AIA_Related_Plan_Name__c</fullName>
        <formula>Benefit_Design_Product__r.Plan_Name__r.Plan_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Design_Product__c</fullName>
        <label>Benefit Design Product</label>
        <referenceTo>AIA_Benefit_Design_Product__c</referenceTo>
        <relationshipLabel>Related Benefit Design Products (Benefit Design Product)</relationshipLabel>
        <relationshipName>Related_BD_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_category_drawloop__c</fullName>
        <formula>Text(Benefit_Design_Product__r.Plan_Name__r.Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product category drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_full_Name__c</fullName>
        <formula>Benefit_Design_Product__r.Plan_Name__r.Full_Plan_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Benefit_Design_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Benefit Design Product</label>
        <referenceTo>AIA_Benefit_Design_Product__c</referenceTo>
        <relationshipName>Related_BD_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Benefit Design Product</label>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>Related Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Benefit Design Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>